--- a/bin/build
+++ b/bin/build
@@ -1,13 +1,15 @@
 #!/bin/bash
 #
 # $Info: Invoke cmake/make in build directory if present and generate logfile. $
-version=1.2
+
+version=1.3
+
 function Do_Help() {
 cat >/dev/null <<HELP_TEXT
 Purpose
 -------
 
-Build and optionally run the specified target.
+Build and optionally run the specified target. Focused on cmake.
 
 Syntax 
 -------
@@ -22,6 +24,7 @@ Options
 + -check ........ run cppcheck
 + -clean ........ make clean before building
 + -clear ........ clear out cmake intermediary files for rebuild
++ -clearup ...... clear and exit
 + -d ............ debug mode
 + --help ........ display this help text and exit
 + -gdb .......... invoke with gdb
@@ -59,9 +62,37 @@ fi
 #-------------------------------------------------------------------------------
 # Support functions
 #-------------------------------------------------------------------------------
+NO_COLOR=0
+COLOR_EMPTY=''
+if [[ $NO_COLOR == 0 ]]; then
+  COLOR_BOLD_BLK='[01;30m'
+  COLOR_BOLD_RED='[01;31m'
+  COLOR_BOLD_GRN='[01;32m'
+  COLOR_BOLD_YLW='[01;33m'
+  COLOR_BOLD_BLU='[01;34m'
+  COLOR_BOLD_MAG='[01;35m'
+  COLOR_BOLD_CYN='[01;36m'
+  COLOR_BOLD_WHT='[01;37m'
+  COLOR_BOLD='[01m'
+  COLOR_NONE='[00m'
+else
+  COLOR_BOLD_BLK=''
+  COLOR_BOLD_RED=''
+  COLOR_BOLD_GRN=''
+  COLOR_BOLD_YLW=''
+  COLOR_BOLD_BLU=''
+  COLOR_BOLD_MAG=''
+  COLOR_BOLD_CYN=''
+  COLOR_BOLD_WHT=''
+  COLOR_BOLD=''
+  COLOR_NONE=''
+fi
 let error_count=0
+function Info() { # Call this with message to report errors
+  echo "${COLOR_EMPTY}Info: $@"${COLOR_EMPTY}
+}
 function Error() { # Call this with message to report errors
-  echo "ERROR: $@" 1>&2
+  echo "${COLOR_BOLD_RED}Error: $@"${COLOR_NONE} 1>&2
   let error_count++
 }
 function firstreal () { # returns first argument that is a real file or directory
@@ -119,8 +150,8 @@ MAKE_OPTS=""
 RUN_OPTS=""
 ARGS=""
 RUN_FLAG=0
-CLEAR_FLAG=0
 CLEAN_FLAG=0
+CLEAR_FLAG=0
 CHECK_FLAG=0
 GDBP=""
 NAH=0
@@ -183,6 +214,9 @@ while [[ "$1" =~ -.* ]]; do
   elif [[ "$1" == '-clean' ]]; then
     CLEAN_FLAG=1
     shift
+  elif [[ "$1" == '-clearup' ]]; then
+    CLEAR_FLAG=2
+    shift
   elif [[ "$1" == '-clear' ]]; then
     CLEAR_FLAG=1
     shift
@@ -215,7 +249,7 @@ while [[ "$1" =~ -.* ]]; do
     RUN_OPTS="${RUN_OPTS} -debug"
     shift
   elif [[ "$1" == '--version' ]]; then
-    echo "INFO: 'build' tool version $version"
+    Info "'build' tool version $version"
     shift
   elif [[ "$1" == '--' ]]; then
     RUN_FLAG=1
@@ -236,9 +270,9 @@ if [[ $# > 0 ]]; then
   TARGET="$1"
   shift
 elif [[ "$TARGET" == "" ]]; then
-  echo "INFO: Using default target - all"
+  Info "Using default target - all"
 else
-  echo "INFO: Using default target - $TARGET"
+  Info "Using default target - $TARGET"
 fi
 sleep 2
 
@@ -301,8 +335,15 @@ fi
 #-------------------------------------------------------------------------------
 rm -f "$BUILD_LOGNAME" $RUN_LOGNAME "$ROOT_DIR/$BUILD_LOGNAME" "$ROOT_DIR/$RUN_LOGNAME"
 if [[ -r $CMAKELIST ]]; then
-  if [[ $CLEAR_FLAG == 1 && -r CMakeCache.txt ]]; then
-    rm -fr CMakeCache.txt CMakeFiles Makefile *.ninja cmake_install.cmake
+  if [[ $CLEAR_FLAG != 0 && -r CMakeCache.txt ]]; then
+    for f in .??* *; do
+      if [[ "$(git ls-files $f)" == "" ]]; then
+        rm -fr "$f";
+      fi
+    done
+  fi
+  if [[ $CLEAR_FLAG == 2 ]]; then
+    exit 0;
   fi
   echo "cmake -G '$GENERATOR' ${CMAKE_OPTS} '$ROOT_DIR' 2>&1 | tee -a $BUILD_LOGNAME"
   cmake -G "$GENERATOR" "${CMAKE_OPTS}" -S "$ROOT_DIR"
@@ -349,10 +390,10 @@ if [[ $RUN_FLAG == 1 ]]; then
   fi
 fi
 if [[ -r $BUILD_LOGNAME ]]; then
-  echo "Info: Created $BUILD_LOGNAME"
+  Info "Created $BUILD_LOGNAME"
 fi
 if [[ -r $RUN_LOGNAME ]]; then
-  echo "Info: Created $RUN_LOGNAME"
+  Info "Created $RUN_LOGNAME"
 fi
 
 #-------------------------------------------------------------------------------
